--- a/clase-martes-24-agosto/assets/css/estilos.css
+++ b/clase-martes-24-agosto/assets/css/estilos.css
@@ -1,20 +1,104 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-image: url('../image/concierto.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+header h1{
+    text-align: center;
+}
 .container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1;
+    grid-template-rows: 500px;
+    column-gap: 10px;
 }
 .artista1{
     grid-column:1;
     grid-row: 1;
-    
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    position: relative;
+}
+
+#btn-artista1{
+    margin-bottom: 20px;
+}
+#btn-artista1 img{
+    border-radius: 50%;
+    cursor: pointer;
+    -webkit-transition:all .9s ease;
+}
+#btn-artista1 img:hover{
+    -webkit-transform:scale(1.25);
+    -moz-transform:scale(1.25);
+    -ms-transform:scale(1.25);
+    -o-transform:scale(1.25);
+    transform:scale(1.25);
 }
 .artista2{
     grid-column:2;
-    grid-row: 1;
-    
+    grid-row: 1;  
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    position: relative;
 }
-.artista2{
+
+#btn-artista2{
+    margin-bottom: 20px;
+    border-radius: 50%;
+}
+#btn-artista2 img{
+    border-radius: 50%;
+    cursor: pointer;
+    -webkit-transition:all .9s ease;
+}
+#btn-artista2 img:hover{
+    -webkit-transform:scale(1.25);
+    -moz-transform:scale(1.25);
+    -ms-transform:scale(1.25);
+    -o-transform:scale(1.25);
+    transform:scale(1.25);
+}
+.artista3{
     grid-column:3;
     grid-row: 1;
-    
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    position: relative;
+}
+
+#btn-artista3{
+    margin-bottom: 20px;
+}
+#btn-artista3 img{
+    border-radius: 50%;
+    cursor: pointer;
+    -webkit-transition:all .9s ease;
+}
+#btn-artista3 img:hover{
+    -webkit-transform:scale(1.25);
+    -moz-transform:scale(1.25);
+    -ms-transform:scale(1.25);
+    -o-transform:scale(1.25);
+    transform:scale(1.25);
+}
+.nombre, .edad, .genero{
+    margin: 0;
+    padding: 0;
+    display: inline;
 }
